# PyGuard

./: .bandit  .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .lycheeignore  .lycheeignore copy  .markdownlint.json  .markdownlint.jsonc  .pre-commit-config.yaml  .pre-commit-config.yaml.example  .pre-commit-hooks.yaml  .pylintrc  .vale copy.ini  .vale.ini  .yamllint.yml  ADVANCED_FEATURES.md  ARCHITECTURE.md  AUTOFIX_ANALYSIS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_PYGUARD_TEST_PLAN.md  COMPREHENSIVE_TEST_ANALYSIS.md  COMPREHENSIVE_TEST_PLAN.md  COMPREHENSIVE_TEST_PLAN_V2.md  COMPREHENSIVE_TEST_SUITE_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTORS.md  COVERAGE_STATUS.md  DEEP_ANALYSIS_REPORT.md  DISTRIBUTION.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  Dockerfile  ENHANCEMENTS_SUMMARY.md  FEATURES_ADDED.md  FINAL_STATUS_REPORT.txt  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_COMPLETE_SUMMARY_v2.md  (+74 more)
.github/: ACTIONS_VERSIONS.md  CODEOWNERS  CODE_SCANNING_ALERTS.md  COPILOT-MCP-SERVERS.md  FUNDING.yml  IMPLEMENTATION_SUMMARY.md  WORKFLOW_ARCHITECTURE.md  WORKFLOW_CHANGES_v2.md  WORKFLOW_OPTIMIZATION_SUMMARY.md  copilot-instructions.md  copilot-mcp.json  copilot-setup-steps.yml  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  security_vulnerability.md
.github/workflows/: README.md  benchmarks.yml  codeql.yml  comprehensive-tests.yml  coverage.yml  dependabot-auto-merge.yml  dependency-review.yml  docker-publish.yml  docs-ci.yml  lint.yml  path-guard.yml  pr-labeler.yml  pyguard-incremental.yml  pyguard-security-scan.yml  pyguard-template.yml  quality.yml  release.yml  scorecard.yml  security-scan.yml  stale.yml  test-action.yml  test.yml  workflow-lint.yml
Styles/Spelling/: Spelling.yml
Styles/TechDocs/: PreferActive.yml  Terminology.yml  WeaselWords.yml
benchmarks/: README.md  bench_security.py  benchmark_results.json  notebook_performance.py
config/: qa_settings.toml  security_rules.toml
cov_annotate/: z_99a0e305d167f7a3___init__.py,cover  z_99a0e305d167f7a3_cli.py,cover  z_99a0e305d167f7a3_git_hooks_cli.py,cover  z_cf59e87236f3ffdc___init__.py,cover  z_cf59e87236f3ffdc_advanced_security.py,cover  z_cf59e87236f3ffdc_ai_explainer.py,cover  z_cf59e87236f3ffdc_ast_analyzer.py,cover  z_cf59e87236f3ffdc_async_patterns.py,cover  z_cf59e87236f3ffdc_best_practices.py,cover  z_cf59e87236f3ffdc_bugbear.py,cover  z_cf59e87236f3ffdc_cache.py,cover  z_cf59e87236f3ffdc_ci_integration.py,cover  z_cf59e87236f3ffdc_code_simplification.py,cover  z_cf59e87236f3ffdc_compliance_tracker.py,cover  z_cf59e87236f3ffdc_comprehensions.py,cover  z_cf59e87236f3ffdc_core.py,cover  z_cf59e87236f3ffdc_custom_rules.py,cover  z_cf59e87236f3ffdc_datetime_patterns.py,cover  z_cf59e87236f3ffdc_debugging_patterns.py,cover  z_cf59e87236f3ffdc_dependency_analyzer.py,cover  z_cf59e87236f3ffdc_enhanced_detections.py,cover  z_cf59e87236f3ffdc_enhanced_security_fixes.py,cover  z_cf59e87236f3ffdc_exception_handling.py,cover  z_cf59e87236f3ffdc_fix_safety.py,cover  z_cf59e87236f3ffdc_formatting.py,cover  z_cf59e87236f3ffdc_framework_django.py,cover  z_cf59e87236f3ffdc_framework_flask.py,cover  z_cf59e87236f3ffdc_framework_pandas.py,cover  z_cf59e87236f3ffdc_framework_pytest.py,cover  z_cf59e87236f3ffdc_git_hooks.py,cover  z_cf59e87236f3ffdc_import_analyzer.py,cover  z_cf59e87236f3ffdc_import_manager.py,cover  z_cf59e87236f3ffdc_import_rules.py,cover  z_cf59e87236f3ffdc_knowledge_integration.py,cover  z_cf59e87236f3ffdc_logging_patterns.py,cover  z_cf59e87236f3ffdc_mcp_integration.py,cover  z_cf59e87236f3ffdc_missing_auto_fixes.py,cover  z_cf59e87236f3ffdc_ml_detection.py,cover  z_cf59e87236f3ffdc_modern_python.py,cover  z_cf59e87236f3ffdc_naming_conventions.py,cover  (+29 more)
docs/: ACCESSIBILITY-TESTING.md  ACTION_SETUP_SUMMARY.md  ADVANCED-SECURITY.md  ARCHITECTURE.md  BEGINNER-GUIDE.md  BEGINNER-TUTORIAL.md  CHANGELOG.md  CODE-SCANNING-ALERTS.md  CODE_OF_CONDUCT.md  COMPETING_PRODUCTS_COVERAGE.md  COMPETITIVE-ANALYSIS.md  COMPLETE-BEGINNER-GUIDE.md  COMPLIANCE.md  COMPONENT-LIBRARY.md  COMPREHENSIVE_ANALYSIS_COMPLETE.md  COMPREHENSIVE_ANALYSIS_INDEX.md  COMPREHENSIVE_GAP_ANALYSIS.md  COMPREHENSIVE_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_LINTER_ANALYSIS.md  COMPREHENSIVE_TEST_PLAN.md  CONTRIBUTORS.md  DEPENDABOT.md  DEPENDENCY_MANAGEMENT.md  DOCUMENTATION_INDEX.md  ENHANCEMENT_PLAN.md  EXECUTIVE_SUMMARY.md  EXECUTIVE_SUMMARY_2025-10-14.md  FEATURES.md  GAP_ANALYSIS.md  GETTING-STARTED.md  GITHUB-INTEGRATION.md  GITHUB_ACTION_PUBLISHING.md  GITHUB_ACTION_QUICK_REFERENCE.md  HTML-REPORT-ENHANCEMENTS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STRATEGY.md  INDEX.md  JUPYTER_SECURITY_ENHANCEMENT_SUMMARY.md  LINTER-GAP-ANALYSIS.md  MANIFEST.md  (+65 more)
docs/copilot/: PYSEC.md  PYTHON_PERFECTIONIST_AGENT.md  SECURITY_DOMINANCE_PLAN.md  ai_ml.md
docs/development/: v070.md  (+56 more)
examples/: README.md  advanced_features_demo.py  advanced_integrations_demo.py  advanced_usage.py  api_usage.py  basic_usage.py  custom_rules_example.toml  git-hooks-demo.md  notebook_security_demo.ipynb  notebook_security_demo.md  notebook_security_demo.py  phase3_demo.py  pyguard.toml.example  sample_code.py  secure_notebook_example.ipynb  ui_demo.py
homebrew/: README.md  TAP_SETUP.md  generate_formula.py  pyguard.rb
packaging/: README.md
pyguard/: __init__.py  api.py  cli.py  git_hooks_cli.py
pyguard_lsp/: README.md  __init__.py  requirements.txt  server.py
scripts/: add_suppressions.py  check_quality.sh  install.sh  release.sh  setup_dev.sh  update-dependencies.sh  validate-action.sh  validate-mcp-config.sh  validate-workflow-security.sh
security/: IMPLEMENTATION_SUMMARY.md  README.md  RISK_LEDGER.md  SECURE_CODING_GUIDE.md  SECURITY_AUDIT_2025.md  SECURITY_MAINTENANCE.md  THREAT_MODEL.md  WORKFLOW_SECURITY_CHECKLIST.md
test_demo/: sample.py
tests/: __init__.py  conftest.py  test_business_logic.py  test_framework_pyramid.py
tools/: benchmark_false_positives.py  benchmark_performance.py
vscode-pyguard/: README.md  package.json
(+350 files in other folders)
