[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyguard"
version = "0.7.0"
description = "The Python Security & Quality Tool Developers Love - Easy to use, powerful auto-fix, 1,230+ checks"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Chad Boyd"}
]
keywords = ["security", "code-quality", "static-analysis", "linting", "github-actions", "sarif", "python", "vulnerability-scanner", "autofix"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Environment :: Console",
    "Typing :: Typed",
]

# Core dependencies - PyGuard does everything itself!
dependencies = [
    "rich>=14.2.0",     # Beautiful terminal UI
    "watchdog>=6.0.0",  # File watching for watch mode
]

[project.optional-dependencies]
# Notebook support - ONLY optional dependency for analyzing .ipynb files
notebooks = [
    "nbformat>=5.0.0",  # Required to read Jupyter notebooks
    "nbclient>=0.5.0",  # Required to execute notebooks
]

# Full installation - same as notebooks (for backwards compatibility)
full = [
    "nbformat>=5.0.0",
    "nbclient>=0.5.0",
]

# Development dependencies
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-randomly>=3.15.0",
    "pytest-benchmark>=4.0.0",
    "pytest-xdist>=3.6.0",
    "freezegun>=1.5.0",
    "hypothesis>=6.100.0",
    "tox>=4.31.0",
]

[project.urls]
Homepage = "https://github.com/cboyd0319/PyGuard"
Documentation = "https://github.com/cboyd0319/PyGuard/tree/main/docs"
Repository = "https://github.com/cboyd0319/PyGuard"
"Bug Tracker" = "https://github.com/cboyd0319/PyGuard/issues"
"Security Policy" = "https://github.com/cboyd0319/PyGuard/security/policy"
"Changelog" = "https://github.com/cboyd0319/PyGuard/blob/main/docs/CHANGELOG.md"
"GitHub Action" = "https://github.com/marketplace/actions/pyguard-security-scanner"

[project.scripts]
pyguard = "pyguard.cli:main"
pyguard-hooks = "pyguard.git_hooks_cli:main"

[tool.black]
line-length = 100
target-version = ['py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["pyguard", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "S",      # flake8-bandit (security)
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "S101",   # Use of assert (OK in tests and validation code)
    "S603",   # subprocess call (intentional for tool integration)
    "S607",   # Starting process with partial path (intentional)
    "S104",   # Binding to all interfaces (intentional in examples)
    "S108",   # Hardcoded temp directory (standard practice)
    "S110",   # Try-except-pass (intentional in some error handling)
    "S112",   # Try-except-continue (intentional in some loops)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004", "ARG", "S105"]
"pyguard/lib/**/*.py" = ["T20"]  # Print statements OK in security detection modules
"pyguard/cli.py" = ["PLC0415"]  # Lazy imports for performance
"pyguard/commands/doctor.py" = ["PLC0415", "PLR0912", "PLR0915"]  # Diagnostic command complexity acceptable
"pyguard/commands/fix.py" = ["PLC0415", "PLR0912", "PLR0915"]  # Fix command complexity acceptable
"pyguard/commands/scan.py" = ["PLC0415", "PLR0912"]  # Scan command complexity acceptable
"pyguard/commands/watch.py" = ["PLC0415"]  # Lazy imports for performance

[tool.ruff.lint.isort]
known-first-party = ["pyguard"]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_calls = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q", 
    "--strict-config",
    "--strict-markers",
    "--disable-warnings",
    "--randomly-seed=1337",
    "--cov=pyguard",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
xfail_strict = true
filterwarnings = [
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "security: marks security-related tests",
    "best_practices: marks best practices tests",
    "formatting: marks formatting tests",
]

[tool.coverage.run]
branch = true
source = ["pyguard"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/examples/*",
    "*/benchmarks/*",
    "*/__pycache__/*",
]
parallel = true

[tool.coverage.report]
fail_under = 84  # Current coverage: 84%, Target: 87% (see PYTHON_PERFECTIONIST_FINAL_ANALYSIS_COMPLETE.md)
skip_covered = true
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "pass",
]

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
]

[tool.bandit]
exclude_dirs = ["tests", "benchmarks"]
skips = ["B101", "B601"]
